--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^7.0.0",
+    "framer-motion": "^7.3.6",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.6.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-intersection-observer": "^9.4.0",
     "react-items-carousel": "^2.8.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
